Set CTest timeout to 120 from default 60
Also disabled laser scans from costmap so it doesnt block CI testing.

--- a/autonomy/CMakeLists.txt
+++ b/autonomy/CMakeLists.txt
@@ -82,7 +82,7 @@ if(BUILD_TESTING)
     find_package(astar_planner REQUIRED)
     find_package(sim_band_planner REQUIRED)
     find_package(pure_pursuit_controller REQUIRED)
-    add_ros_test(test/test_drive_to_waypoint.py)
+    add_ros_test(test/test_drive_to_waypoint.py TIMEOUT "120")
 endif()
 
 ament_package()
